--- a/templates/hono-trpc-vite/apps/server/package.json
+++ b/templates/hono-trpc-vite/apps/server/package.json
@@ -6,13 +6,14 @@
     "./trpc": "./src/trpc/root.ts"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "node esbuild.config.js",
-    "start": "node ./dist/index.cjs"
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
+    "build": "cross-env NODE_ENV=production node esbuild.config.js",
+    "start": "cross-env NODE_ENV=production node ./dist/index.cjs"
   },
   "dependencies": {
     "@hono/node-server": "^1.12.1",
     "@trpc/server": "^10.45.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "esbuild": "^0.23.1",
     "hono": "^4.5.8",
