feat(kyrix): enabled vite to work on custom server in dev & configured ssr data injection

--- a/templates/trpc-vite-simple/tsconfig.node.json
+++ b/templates/trpc-vite-simple/tsconfig.node.json
@@ -16,7 +16,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "."
+    // "paths": {
+    //   "@kyrix/*": ["./src/server/__kyrix/*"]
+    // }
   },
-  "include": ["vite.config.ts", "src/server/**/*"]
+  "include": ["vite.config.server.ts", "src/server/**/*"]
 }
