--- a/templates/trpc-vite-simple/package.json
+++ b/templates/trpc-vite-simple/package.json
@@ -3,18 +3,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"cross-env NODE_ENV=development tsx watch ./src/server/main.ts\" \"vite\"",
-    "build": "cross-env NODE_ENV=production pnpm vite build --config vite.config.server.ts && tsc -b && vite build",
-    "start": "cross-env NODE_ENV=production node ./dist/server.js",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "nodemon",
+    "build": "tsc -b && cross-env NODE_ENV=production vite build --config vite.config.server.ts && cross-env NODE_ENV=build-client tsx ./src/server/__kyrix/build.ts",
+    "start": "cross-env NODE_ENV=production node ./dist/server.cjs",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@tanstack/react-query": "4",
+    "@tanstack/react-query": "^4.0.5",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -35,6 +33,7 @@
     "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "nodemon": "^3.1.4",
     "tsx": "^4.18.0",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.2.0",
