--- a/templates/trpc-vite-simple/tsconfig.app.json
+++ b/templates/trpc-vite-simple/tsconfig.app.json
@@ -18,7 +18,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "."
+    // "paths": {
+    //   "@kyrix/*": ["./src/server/__kyrix/*"]
+    // }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["./src/server/**/*"]
 }
